--- a/MapAndVideoPlay/MapAndVideoPlay/Base.lproj/Main.storyboard
+++ b/MapAndVideoPlay/MapAndVideoPlay/Base.lproj/Main.storyboard
@@ -7,25 +7,6 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--New Movie View Controller-->
-        <scene sceneID="43I-jj-NU0">
-            <objects>
-                <viewController id="Gfh-l8-Nvo" customClass="NewMovieViewController" customModule="MapAndVideoPlay" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="zXb-1f-7Yc">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="2ec-SM-22V"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="zjS-uj-f58"/>
-                    <connections>
-                        <segue destination="IG1-fB-e8V" kind="show" id="D9i-01-gSZ"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="CVk-8F-djC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-78" y="-508"/>
-        </scene>
         <!--Camera View Controller-->
         <scene sceneID="oKT-EW-xGH">
             <objects>
@@ -34,41 +15,44 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c1d-1c-P4e">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c1d-1c-P4e" customClass="CameraPreviewView" customModule="MapAndVideoPlay" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="88" width="414" height="808"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vjb-EK-TXu">
-                                        <rect key="frame" x="182" y="718" width="50" height="50"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="50" id="Eiz-7b-QDr"/>
-                                            <constraint firstAttribute="width" constant="50" id="U0O-hh-n2B"/>
-                                        </constraints>
-                                        <color key="tintColor" red="0.58072251080000004" green="0.066734083" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <state key="normal" image="Record"/>
-                                        <state key="selected" image="Stop"/>
-                                    </button>
-                                </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstItem="Vjb-EK-TXu" firstAttribute="centerX" secondItem="c1d-1c-P4e" secondAttribute="centerX" id="K6d-Pw-OIF"/>
-                                    <constraint firstAttribute="bottom" secondItem="Vjb-EK-TXu" secondAttribute="bottom" constant="40" id="NZb-77-zs5"/>
-                                </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vjb-EK-TXu">
+                                <rect key="frame" x="182" y="792" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="Eiz-7b-QDr"/>
+                                    <constraint firstAttribute="width" constant="50" id="U0O-hh-n2B"/>
+                                </constraints>
+                                <color key="tintColor" red="0.58072251080000004" green="0.066734083" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" image="Record"/>
+                                <state key="selected" image="Stop"/>
+                                <connections>
+                                    <action selector="recordButtonTapped:" destination="IG1-fB-e8V" eventType="touchUpInside" id="9ho-XA-fxN"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="me6-WM-9Lj" firstAttribute="bottom" secondItem="Vjb-EK-TXu" secondAttribute="bottom" constant="20" id="QPq-ke-Hc3"/>
                             <constraint firstItem="c1d-1c-P4e" firstAttribute="leading" secondItem="me6-WM-9Lj" secondAttribute="leading" id="hxN-QL-gAk"/>
                             <constraint firstItem="c1d-1c-P4e" firstAttribute="top" secondItem="me6-WM-9Lj" secondAttribute="top" id="jBc-6J-DUx"/>
                             <constraint firstItem="me6-WM-9Lj" firstAttribute="bottom" secondItem="c1d-1c-P4e" secondAttribute="bottom" constant="-34" id="l6P-HS-Tv2"/>
+                            <constraint firstItem="Vjb-EK-TXu" firstAttribute="centerX" secondItem="nnI-pa-oNY" secondAttribute="centerX" id="vB2-1o-rcq"/>
                             <constraint firstItem="me6-WM-9Lj" firstAttribute="trailing" secondItem="c1d-1c-P4e" secondAttribute="trailing" id="yfi-Kf-Ps3"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="me6-WM-9Lj"/>
                     </view>
                     <navigationItem key="navigationItem" id="pOk-WD-yGv"/>
+                    <connections>
+                        <outlet property="myCameraView" destination="c1d-1c-P4e" id="liF-ht-gaS"/>
+                        <outlet property="myRecordButton" destination="Vjb-EK-TXu" id="amh-j9-ntm"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="O2m-LH-sXc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="637.68115942028987" y="-508.25892857142856"/>
+            <point key="canvasLocation" x="-78" y="-513"/>
         </scene>
         <!--Show Video View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -86,7 +70,7 @@
             </objects>
             <point key="canvasLocation" x="-78" y="138"/>
         </scene>
-        <!--Root View Controller-->
+        <!--Your Movies-->
         <scene sceneID="bZG-wY-5gE">
             <objects>
                 <tableViewController id="mIa-lZ-wgk" customClass="MovieTitlesTableViewController" customModule="MapAndVideoPlay" customModuleProvider="target" sceneMemberID="viewController">
@@ -112,17 +96,62 @@
                             <outlet property="delegate" destination="mIa-lZ-wgk" id="wKz-eL-o4b"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="uEw-fa-FBu">
+                    <navigationItem key="navigationItem" title="Your Movies" id="uEw-fa-FBu">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="CcX-hm-AhU">
                             <connections>
-                                <segue destination="Gfh-l8-Nvo" kind="show" identifier="ShowTakeVideoSegue" id="lya-30-8Pz"/>
+                                <action selector="requestPermissionsOrShowCamera:" destination="mIa-lZ-wgk" id="Q6f-tf-nu2"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <segue destination="IG1-fB-e8V" kind="show" identifier="ShowCamera" id="1Pt-Us-6jb"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6UM-j2-Li8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-791" y="138"/>
+        </scene>
+        <!--Map View Controller-->
+        <scene sceneID="651-fN-hUu">
+            <objects>
+                <viewController id="TPM-KA-Oqw" customClass="MapViewController" customModule="MapAndVideoPlay" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="UTU-l2-0RZ">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="qzb-87-whK">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </mapView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="qzb-87-whK" firstAttribute="width" secondItem="UTU-l2-0RZ" secondAttribute="width" id="2e6-FE-YXG"/>
+                            <constraint firstItem="qzb-87-whK" firstAttribute="centerX" secondItem="UTU-l2-0RZ" secondAttribute="centerX" id="79G-YQ-2g3"/>
+                            <constraint firstItem="qzb-87-whK" firstAttribute="height" secondItem="UTU-l2-0RZ" secondAttribute="height" id="WVW-iB-Shw"/>
+                            <constraint firstItem="qzb-87-whK" firstAttribute="centerY" secondItem="UTU-l2-0RZ" secondAttribute="centerY" id="tDp-8w-Ksa"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="HvF-2B-1X2"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="t4P-yb-bpD">
+                        <barButtonItem key="rightBarButtonItem" title="List" style="plain" id="dpt-Ni-gS0">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="wfY-al-Yau">
+                                <rect key="frame" x="302" y="7" width="92" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="List"/>
+                                <connections>
+                                    <action selector="showTableView:" destination="TPM-KA-Oqw" eventType="touchUpInside" id="1oK-xO-FAF"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="mapView" destination="qzb-87-whK" id="q5x-Aq-OV9"/>
+                        <segue destination="mIa-lZ-wgk" kind="show" identifier="ShowTableViewSegue" id="6Kc-Dn-2nq"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XhP-cw-PXk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1532" y="486"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="q6w-fd-7ke">
@@ -133,12 +162,12 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="mIa-lZ-wgk" kind="relationship" relationship="rootViewController" id="hgw-xO-JW7"/>
+                        <segue destination="TPM-KA-Oqw" kind="relationship" relationship="rootViewController" id="Je5-xF-UGe"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JB8-Mm-HTW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1501" y="138"/>
+            <point key="canvasLocation" x="-2293" y="138"/>
         </scene>
     </scenes>
     <resources>
